--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@
 /[Ll]ogs/
 /[Uu]ser[Ss]ettings/
 /[Mm]emoryCaptures/
+/Assets/_Recovery/
+/Assets/_Recovery.meta
 
 # Fichiers générés par l'IDE (Visual Studio / VS Code / Rider)
 /*.sln
